--- a/q1/q1/css/style.css
+++ b/q1/q1/css/style.css
@@ -1,2 +1,101 @@
 @charset "UTF-8";
+
 /* 回答はここから */
+
+
+/* Q1 */
+
+
+/*---text-alien--------------------------*/
+
+.text-alien {
+    background-color: #a4b3e9;
+    display: inline-block;
+    padding: 10px;
+}
+
+.white {
+    background-color: #fff;
+    display: inline-block;
+    width: 200px;
+    padding: 20px 0;
+    font-size: 16px;
+    text-align: center;
+}
+
+
+/*---margin--------------------------*/
+
+.margin {
+    background-color: #a4b3e9;
+    display: inline-block;
+    padding: 10px 28px;
+    margin: 0 auto;
+}
+
+.padding {
+    margin: 0;
+    padding: 20px 45px;
+    background-color: #fff;
+    display: inline-block;
+}
+
+
+/* Q2 */
+
+
+/*---table--------------------------*/
+
+
+/*-質問-*/
+
+
+/*-vertical-align: middle;margin:auto;display: table-cell;など、
+さまざまな組み合わせでチャレンジしてみましたが上手くできませんでした。
+修正箇所を教えてください。
+-*/
+
+.table {
+    background-color: #fff;
+    padding: 10px;
+    max-width: 90%;
+    display: table;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.tableout {
+    margin: auto;
+}
+
+
+/*---flex--------------------------*/
+
+.flex {
+    padding: 10px;
+    background-color: #fff;
+}
+
+.flexout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+}
+
+
+/*---position--------------------------*/
+
+.position {
+    background-color: #a4b3e9;
+    display: inline-block;
+    padding: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.container {
+    position: relative;
+}
