--- a/q2/q2/css/style.css
+++ b/q2/q2/css/style.css
@@ -5,16 +5,14 @@
 .card {
     outline: 10px solid #655;
     box-shadow: 0 0 0 6px #655;
-    border-radius: 13px;
     background-color: #d2b48c;
     width: 200px;
     padding: 10px;
+    margin: 30px;
 }
 
 .item {
     display: flex;
     height: auto;
-    gap: 50px 60px;
     justify-content: center;
-    margin: 30px 0;
 }
