--- a/q1/q1/css/style.css
+++ b/q1/q1/css/style.css
@@ -59,13 +59,19 @@
     background-color: #fff;
     padding: 10px;
     max-width: 90%;
-    display: table;
     text-align: center;
-    vertical-align: middle;
+    display: inline-block;
 }
 
 .tableout {
     margin: auto;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.tablebox {
+    display: table;
 }
 
 
